# DANAH_v1

./: .env.example  .gitignore  BUILD_REPORT.md  DANAH Implementation Playbook.docx  DANAH_CLAUDE_CODE_MASTER_PROMPT.md  DANAH_DEVELOPER_ARCHITECTURE.md  DANAH_FULL_BUILD_EXECUTION_PROMPT.md  DANAH_Strategic_Intelligence_Platform_v11.html  Dockerfile  FIRST_RUN.md  Makefile  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  env.example  make.ps1  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  db.py  deps.py  enums.py  exceptions.py  logging.py  main.py  metrics.py
app/api/: __init__.py  admin.py  approvals.py  audit.py  auth.py  briefings.py  chat.py  dashboard.py  health.py  ingest.py  insights.py  items.py  knowledge.py  memory.py  notifications.py  pipeline.py  sources.py
app/models/: __init__.py  approval.py  audit.py  base.py  briefing.py  chat.py  document.py  insight.py  memory.py  notification.py  pipeline.py  source.py  usage.py  user.py
app/schemas/: __init__.py  approvals.py  audit.py  auth.py  briefings.py  chat.py  common.py  dashboard.py  insights.py  knowledge.py  memory.py  notifications.py  pipeline.py  sources.py
app/security/: jwt.py  oidc.py  passwords.py  rate_limit.py  rbac.py
app/services/: __init__.py  approval_service.py  audit_service.py  auth_service.py  chat_service.py  dashboard_service.py  memory_service.py  notification_service.py  orchestrator.py
app/services/agents/: __init__.py  base.py  briefing_agent.py  memory_agent.py  opportunity_agent.py  policy_agent.py  risk_agent.py  schemas.py  signal_agent.py  tools.py
app/services/agents/prompts/: briefing_v1.md  memory_v1.md  opportunity_v1.md  policy_v1.md  risk_v1.md  signal_v1.md
app/services/ingestion/: __init__.py  base_connector.py  gdelt.py  reliefweb.py  rss.py  runner.py  webhook.py  worldbank.py
app/services/llm/: __init__.py  anthropic_provider.py  gateway.py  openai_provider.py  usage_tracker.py
app/services/rag/: __init__.py  chunking.py  composer.py  embeddings.py  indexer.py  retriever.py  storage.py
app/workers/: __init__.py  tasks.py  worker.py
docs/: API.md  DECISIONS.md  EXTERNAL_APIS.md  RUNBOOK.md
scripts/: build_ui.py  init-db.sql  loadtest.py  sample_docs.py  seed.py  smoke_test.py
tests/: conftest.py  fakes.py
tests/integration/: test_approvals.py  test_audit.py  test_auth.py  test_chat.py  test_classification.py  test_health.py  test_pipeline.py  test_rate_limit.py
tests/unit/: test_config_contract.py  test_connectors.py  test_rag.py
web/: danah-api.js  danah-theme.css  index.html
