[project]
name = "danah"
version = "0.4.0"
description = "DANAH — Strategic Intelligence Platform backend (API + agents + RAG + ingestion)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }

dependencies = [
    # --- API framework -------------------------------------------------------
    "fastapi>=0.115.0,<0.200.0",
    "uvicorn[standard]>=0.30.0,<0.40.0",
    "python-multipart>=0.0.9,<0.1.0",

    # --- Config / validation -------------------------------------------------
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",

    # --- Database ------------------------------------------------------------
    "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
    "asyncpg>=0.29.0,<0.31.0",
    "alembic>=1.13.0,<2.0.0",
    "pgvector>=0.3.0,<0.5.0",
    "greenlet>=3.0.0,<4.0.0",

    # --- Cache / queue -------------------------------------------------------
    "redis>=5.0.0,<7.0.0",
    "arq>=0.26.0,<0.27.0",

    # --- HTTP / LLM providers ------------------------------------------------
    "httpx>=0.27.0,<0.29.0",
    "anthropic>=0.39.0,<1.0.0",
    "openai>=1.40.0,<2.0.0",

    # --- Security ------------------------------------------------------------
    "argon2-cffi>=23.1.0,<26.0.0",
    "pyjwt>=2.9.0,<3.0.0",

    # --- Document extraction / RAG ------------------------------------------
    "pypdf>=4.3.0,<7.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.2.0,<7.0.0",
    "tiktoken>=0.7.0,<0.12.0",

    # --- Ingestion -----------------------------------------------------------
    "feedparser>=6.0.11,<7.0.0",

    # --- Observability -------------------------------------------------------
    # Metrics are built directly on the official prometheus_client; the
    # prometheus-fastapi-instrumentator wrapper is incompatible with Starlette 0.52
    # (docs/DECISIONS.md #19).
    "structlog>=24.2.0,<26.0.0",
    "prometheus-client>=0.20.0,<1.0.0",

    # --- Notifications -------------------------------------------------------
    "aiosmtplib>=3.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.3.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "respx>=0.21.0,<0.23.0",
    "mypy>=1.11.0,<2.0.0",
    "ruff>=0.6.0,<0.20.0",
    "types-beautifulsoup4>=4.12.0",
    # NB: do NOT add `types-redis` — redis>=5 ships its own py.typed, and the stub package
    # is stale enough to shadow it and hide real methods (e.g. `aclose`) from mypy.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ============================================================================
# Ruff — lint + format. Zero warnings on CI (master prompt §3.9).
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "scripts"]
exclude = ["alembic/versions/*.py.mako", ".venv", "data"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no stray prints in app code)
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length handled by the formatter
    "B008",   # FastAPI's Depends() in defaults is the documented idiom
    "S104",   # binding 0.0.0.0 is intentional inside the container
    # DANAH is bilingual (Arabic is a product requirement) and its docstrings cite the spec
    # by section (§) and use en-dashes. The "ambiguous unicode" rules fight both constantly.
    "RUF001", "RUF002", "RUF003",
    # Pydantic deep-copies mutable field defaults, so `x: list[str] = []` on a BaseModel is
    # safe. RUF012 cannot tell a Pydantic model from a plain class.
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts are the point; dummy credentials are not secrets.
"tests/*" = ["S101", "S105", "S106", "S107", "S311", "E402"]
"scripts/*" = ["T20", "S105", "S106"]            # CLI scripts print to stdout by design
"alembic/*" = ["T20"]
# `token_type: str = "bearer"` is an OAuth constant, not a password.
"app/schemas/auth.py" = ["S105"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# mypy — must pass with --strict (master prompt §3.1)
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["^alembic/versions/", "^\\.venv/", "^data/"]

[[tool.mypy.overrides]]
# These libraries ship no type information and have no maintained stubs.
module = ["feedparser.*", "arq.*", "pgvector.*", "aiosmtplib.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ============================================================================
# pytest
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
# Fixtures and tests must share ONE event loop: the session-scoped engine holds asyncpg
# connections, and asyncpg connections are bound to the loop that created them. Function-scoped
# test loops would make every DB call fail with "attached to a different loop".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
    "live: requires real provider credentials (skipped without keys)",
]
filterwarnings = [
    "error::DeprecationWarning:app.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/workers/worker.py", "*/__init__.py"]

[tool.coverage.report]
skip_empty = true
